fixed login button spacing

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -32,3 +32,7 @@ form {
 .title {
   padding-top: 30px;
 }
+
+.btn {
+  position: static;
+}
